<?xml version="1.0"?>
<package format="2">
  <name>point_cloud_registration</name>
  <version>0.0.0</version>
  <description>A point cloud registration software</description>
  <maintainer email="timo.hinzmann@gmail.com">Timo Hinzmann</maintainer>
  <maintainer email="fontana.simone@outlook.com">Simone Fontana</maintainer>
  <license>ASL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>Eigen3</depend>
  <depend>roscpp</depend>
  <depend>Ceres</depend>
  <depend>VTK</depend>
  <depend>glog_catkin</depend>
  <depend>gflags_catkin</depend>
  <!--<depend>pcl_catkin</depend>-->
  <depend>pcl_ros</depend>
</package>
